# DjangoREST

./: README.md  db.sqlite3  pyproject.toml
DjangoREST/: settings.py
