[tool.poetry]
name = "djangorest"
version = "0.1.0"
description = ""
authors = ["max583 <max583@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
mypy = "^1.6.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
